<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/screen_bg_pattern"
        tools:context="io.github.andyradionov.udacitybakingapp.ui.steps.BakingActivity"
        tools:ignore="ContentDescription,RtlHardcoded">

        <ImageView
            android:visibility="gone"
            android:id="@+id/iv_step_details_image"
            android:layout_width="@dimen/big_picture"
            android:layout_height="@dimen/big_picture" />

        <com.uncopt.android.widget.text.justify.JustifiedTextView
            android:id="@+id/tv_recipe_instructions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/details_margin"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="@dimen/regular_text"
            app:layout_constraintLeft_toRightOf="@id/iv_step_details_image"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_prev_step"
            android:layout_width="@dimen/btn_width"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="@dimen/btn_margin"
            android:text="@string/previous_step"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

        <Button
            android:id="@+id/btn_next_step"
            android:layout_width="@dimen/btn_width"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="@dimen/btn_margin"
            android:text="@string/next_step"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </android.support.constraint.ConstraintLayout>
</layout>