<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_steps_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="io.github.andyradionov.udacitybakingapp.ui.steps.RecipeStepsFragment" />
</layout>
