<resources>
    <string name="app_name">@string/baking_recipes</string>
    <string name="recipes_list_load_error">Can\'t load recipes list!</string>

    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="restart">Restart</string>

    <string name="step_title">Step #%d: %s</string>
    <string name="drawer_open">Open menu</string>
    <string name="drawer_close">Close menu</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="ingredients_title">Ingredients</string>

    <string name="pref_recipe_id_key" translatable="false">recipe_id</string>
    <string name="pref_max_recipe_id_key" translatable="false">recipes_count</string>

    <string name="error_no_internet">No Internet available</string>
    <string name="error_loading_video">Loading video Error</string>
    <string name="baking_recipes">Baking Recipes</string>
    <string name="next_step">Next Step</string>
    <string name="previous_step">Previous step</string>
</resources>
